person - asset balances